--- a/weekOneAssignments/main.css
+++ b/weekOneAssignments/main.css
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {
-  background-color: lightblue;
-}
 
-h1 {
-  color: white;
-  text-align: center;
-}
 
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-</style>
-</head>
-<body>
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+h1 {text-align: center;}
+nav {height: 6000px;
+     width: 200px;
+     float: left;
+     padding: 5px;
+     line-height: 30px;}
+body {background-color: thistle;
+      color: darkorchid;}
+#programmingMemeImage {margin-right: 200px;}
+footer {text-align: center;
+        margin-right: 200px;}
